force-app/main/default/objects/ALC__c/ALC__c.object-meta.xml
<CustomObject>
    <label>ALC</label>
    <nameField>
        <label>ALC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ALC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>