force-app/main/default/objects/ALC__c/fields/A360__c.field-meta.xml
<CustomField>
    <fullName>A360__c</fullName>
    <label>A360?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>