force-app/main/default/objects/ALC__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tenny, Rachyll</fullName>
            </value>
            <value>
                <fullName>Haney, Anna</fullName>
            </value>
            <value>
                <fullName>Watson, Angel</fullName>
            </value>
            <value>
                <fullName>Gruber, Jonathan</fullName>
            </value>
            <value>
                <fullName>Masuda, Diljeet</fullName>
            </value>
            <value>
                <fullName>Denton, Timothy</fullName>
            </value>
            <value>
                <fullName>Ianni, Brooke</fullName>
            </value>
            <value>
                <fullName>Hess, Van</fullName>
            </value>
            <value>
                <fullName>Signorelli, Sara Moore</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Blum, Philip</fullName>
            </value>
            <value>
                <fullName>Former member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>