force-app/main/default/objects/ALC__c/fields/Assistant_Employed_by__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Employed_by__c</fullName>
    <inlineHelpText>Who does this assistant work for?</inlineHelpText>
    <label>Assistant Employed by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>