force-app/main/default/objects/ALC__c/fields/Background_Check_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether 12-day background check follow-up task has been created for Rachyll</description>
    <label>Background Check Task Created</label>
    <type>Checkbox</type>
</CustomField>