force-app/main/default/objects/ALC__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>ALC</relationshipLabel>
    <relationshipName>ALC</relationshipName>
    <type>Lookup</type>
</CustomField>