force-app/main/default/objects/ALC__c/fields/Career_Corp_MM_ID__c.field-meta.xml
<CustomField>
    <fullName>Career_Corp_MM_ID__c</fullName>
    <description>MM ID for Career Corps</description>
    <inlineHelpText>MM ID for Career Corps</inlineHelpText>
    <label>Career Corp MM ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>