force-app/main/default/objects/ALC__c/fields/CM_Code__c.field-meta.xml
<CustomField>
    <fullName>CM_Code__c</fullName>
    <label>CM Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>