force-app/main/default/objects/ALC__c/fields/Contract_B_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_B_Expiration_Date__c</fullName>
    <label>Contract B Expiration Date</label>
    <type>Date</type>
</CustomField>