force-app/main/default/objects/ALC__c/fields/Contract_Effective__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective__c</fullName>
    <label>Contract Effective</label>
    <type>Date</type>
</CustomField>