force-app/main/default/objects/ALC__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Haney, Anna</fullName>
            </value>
            <value>
                <fullName>Watson, Angel</fullName>
            </value>
            <value>
                <fullName>Signorelli, Sara Moore</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>