force-app/main/default/objects/ALC__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>