force-app/main/default/objects/ALC__c/fields/Employed_at_Insurance_Brokerage_in_las__c.field-meta.xml
<CustomField>
    <fullName>Employed_at_Insurance_Brokerage_in_las__c</fullName>
    <label>-	Employed at Insurance/Brokerage in las</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>