force-app/main/default/objects/ALC__c/fields/In_Background_Since__c.field-meta.xml
<CustomField>
    <fullName>In_Background_Since__c</fullName>
    <description>Date when the ALC record entered In Background stage</description>
    <label>In Background Since</label>
    <type>Date</type>
</CustomField>