force-app/main/default/objects/ALC__c/fields/Kaplan_Exam_Request__c.field-meta.xml
<CustomField>
    <fullName>Kaplan_Exam_Request__c</fullName>
    <label>Kaplan Exam Request?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>