force-app/main/default/objects/ALC__c/fields/LADL_Sales_Experience__c.field-meta.xml
<CustomField>
    <fullName>LADL_Sales_Experience__c</fullName>
    <label>-	LADL Sales Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Less_than_2_years</fullName>
                <label>Less than 2 years</label>
            </value>
            <value>
                <fullName>More_than_2_years</fullName>
                <label>More than 2 years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>