force-app/main/default/objects/ALC__c/fields/Last_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Date__c</fullName>
    <description>Date when the last reminder email was sent to the candidate</description>
    <label>Last Reminder Date</label>
    <type>Date</type>
</CustomField>