force-app/main/default/objects/ALC__c/fields/Latest_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Note_Date__c</fullName>
    <label>Latest Note Date</label>
    <type>Date</type>
</CustomField>