force-app/main/default/objects/ALC__c/fields/Latest_Note_Text__c.field-meta.xml
<CustomField>
    <fullName>Latest_Note_Text__c</fullName>
    <label>Latest Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>