force-app/main/default/objects/ALC__c/fields/Life_Insurance_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance_Licensed__c</fullName>
    <label>Life Insurance Licensed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>