force-app/main/default/objects/ALC__c/fields/MMID__c.field-meta.xml
<CustomField>
    <fullName>MMID__c</fullName>
    <label>MMID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>