force-app/main/default/objects/ALC__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile #</label>
    <type>Phone</type>
</CustomField>