force-app/main/default/objects/ALC__c/fields/New_Recruit_Application__c.field-meta.xml
<CustomField>
    <fullName>New_Recruit_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Recruit Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>ALC</relationshipLabel>
    <relationshipName>ALC</relationshipName>
    <type>Lookup</type>
</CustomField>