force-app/main/default/objects/ALC__c/fields/Next_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_Date__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Candidate__r.Career_Presentation_Date_Scheduled__c)), Candidate__r.Career_Presentation_Date_Scheduled__c &gt;= TODAY()),
    Candidate__r.Career_Presentation_Date_Scheduled__c,
    IF(
        AND(NOT(ISBLANK(Candidate__r.SI_3_Scheduled__c)), Candidate__r.SI_3_Scheduled__c &gt;= TODAY()),
        Candidate__r.SI_3_Scheduled__c,
        IF(
            AND(NOT(ISBLANK(Candidate__r.SI_2_Date_Scheduled__c)), Candidate__r.SI_2_Date_Scheduled__c &gt;= TODAY()),
            Candidate__r.SI_2_Date_Scheduled__c,
            IF(
                AND(NOT(ISBLANK(Candidate__r.SI_1_Date_Scheduled__c)), Candidate__r.SI_1_Date_Scheduled__c &gt;= TODAY()),
                Candidate__r.SI_1_Date_Scheduled__c,
                IF(
                    AND(NOT(ISBLANK(Candidate__r.Attraction_Interview_Date_Scheduled__c)), Candidate__r.Attraction_Interview_Date_Scheduled__c &gt;= TODAY()),
                    Candidate__r.Attraction_Interview_Date_Scheduled__c,
                    NULL
                )
            )
        )
    )
)</formula>
    <label>Next Meeting Date</label>
    <type>Date</type>
</CustomField>