force-app/main/default/objects/ALC__c/fields/Personal_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Personal Email Address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>