force-app/main/default/objects/ALC__c/fields/Prior_NWM__c.field-meta.xml
<CustomField>
    <fullName>Prior_NWM__c</fullName>
    <label>Prior NWM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>