force-app/main/default/objects/ALC__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered?</label>
    <type>Checkbox</type>
</CustomField>