force-app/main/default/objects/ALC__c/fields/Related_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Related_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>ALC (Related Candidate)</relationshipLabel>
    <relationshipName>Related_Candidate</relationshipName>
    <type>Lookup</type>
</CustomField>