force-app/main/default/objects/ALC__c/fields/Reminder_10_Day_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_10_Day_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the 10-day urgent reminder email has been sent to the candidate</description>
    <label>10 Day Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>