force-app/main/default/objects/ALC__c/fields/Reminder_5_Day_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_5_Day_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the 5-day reminder email has been sent to the candidate</description>
    <label>5 Day Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>