force-app/main/default/objects/ALC__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tim Denton</fullName>
            </value>
            <value>
                <fullName>Rachyll Tenny</fullName>
            </value>
            <value>
                <fullName>Van Hess</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Michael Yang</fullName>
            </value>
            <value>
                <fullName>Son Le</fullName>
            </value>
            <value>
                <fullName>Bradley Sofonia</fullName>
            </value>
            <value>
                <fullName>Elizabeth Kagele</fullName>
            </value>
            <value>
                <fullName>Diljeet Masuda</fullName>
                <isActive>false</isActive>
                <label>Diljeet Masuda</label>
            </value>
            <value>
                <fullName>Jonathan Gruber</fullName>
                <isActive>false</isActive>
                <label>Jonathan Gruber</label>
            </value>
            <value>
                <fullName>Scott Primm</fullName>
                <isActive>false</isActive>
                <label>Scott Primm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>