force-app/main/default/objects/ALC__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Form Sent</fullName>
                <default>true</default>
                <label>Initial Form Sent</label>
            </value>
            <value>
                <fullName>MM_ONX_Sent</fullName>
                <label>MM ONX sent</label>
            </value>
            <value>
                <fullName>In Background</fullName>
            </value>
            <value>
                <fullName>Receive NRF Info</fullName>
            </value>
            <value>
                <fullName>Request AE</fullName>
            </value>
            <value>
                <fullName>Step 1 Email</fullName>
            </value>
            <value>
                <fullName>NRF BIG Review</fullName>
            </value>
            <value>
                <fullName>Fingerprinting</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>CORP- ECQ Request</fullName>
            </value>
            <value>
                <fullName>Post Background - Pending Rachyll</fullName>
            </value>
            <value>
                <fullName>Sent To Compliance</fullName>
            </value>
            <value>
                <fullName>Pending SM</fullName>
            </value>
            <value>
                <fullName>Contract Codes (A/B) &amp; DocuSign</fullName>
            </value>
            <value>
                <fullName>Submit to HO</fullName>
            </value>
            <value>
                <fullName>AA Received</fullName>
            </value>
            <value>
                <fullName>Candidate Complete</fullName>
            </value>
            <value>
                <fullName>TERMINATED</fullName>
            </value>
            <value>
                <fullName>Initial Setup</fullName>
            </value>
            <value>
                <fullName>Request FieldNet/CoverPath Access</fullName>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>Pending Instructions</fullName>
            </value>
            <value>
                <fullName>Pending Scheduling Zoom</fullName>
            </value>
            <value>
                <fullName>Complete U4</fullName>
            </value>
            <value>
                <fullName>Follow Up with Agent</fullName>
                <label>Follow up with Agent</label>
            </value>
            <value>
                <fullName>Background Check (if 6 months or more)</fullName>
            </value>
            <value>
                <fullName>Received Approval Letter</fullName>
            </value>
            <value>
                <fullName>Send DocuSign Consent</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>