force-app/main/default/objects/ALC__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <label>Start date</label>
    <type>Date</type>
</CustomField>