force-app/main/default/objects/ALC__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Newport Beach</fullName>
            </value>
            <value>
                <fullName>Education Statement</fullName>
            </value>
            <value>
                <fullName>Financial Statement</fullName>
            </value>
            <value>
                <fullName>Diljeet Masuda</fullName>
            </value>
            <value>
                <fullName>CCB Statement</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
            <value>
                <fullName>Utah</fullName>
            </value>
            <value>
                <fullName>Disclosure on FINRA</fullName>
            </value>
            <value>
                <fullName>Contract B</fullName>
            </value>
            <value>
                <fullName>Contract A</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>Release Needed</fullName>
            </value>
            <value>
                <fullName>Gruber</fullName>
            </value>
            <value>
                <fullName>Century City</fullName>
            </value>
            <value>
                <fullName>SOE</fullName>
            </value>
            <value>
                <fullName>Not Licensed</fullName>
            </value>
            <value>
                <fullName>Tim Denton</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>NWM Docs</fullName>
            </value>
            <value>
                <fullName>Son Le</fullName>
            </value>
            <value>
                <fullName>IAP</fullName>
            </value>
            <value>
                <fullName>Disclosure Broker</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Carol-Ann Beers</fullName>
            </value>
            <value>
                <fullName>No Release Needed</fullName>
            </value>
            <value>
                <fullName>Andrew Moore Jr</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>