force-app/main/default/objects/ALC__c/fields/Urgent_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an urgent follow-up task has been created for Rachyll after 12 days</description>
    <label>Urgent Task Created</label>
    <type>Checkbox</type>
</CustomField>