force-app/main/default/objects/ALC__c/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <description>Record Type for Broker Candidate</description>
    <label>Broker</label>
</RecordType>