force-app/main/default/objects/ALC__c/recordTypes/Career.recordType-meta.xml
<RecordType>
    <fullName>Career</fullName>
    <active>true</active>
    <description>Record Type for Career Agent Contracting</description>
    <label>Career</label>
</RecordType>