force-app/main/default/objects/ALC__c/recordTypes/Financing.recordType-meta.xml
<RecordType>
    <fullName>Financing</fullName>
    <active>true</active>
    <label>Financing</label>
</RecordType>