force-app/main/default/objects/ALC__c/recordTypes/NRF.recordType-meta.xml
<RecordType>
    <fullName>NRF</fullName>
    <active>true</active>
    <description>Record Type for NRF</description>
    <label>NRF</label>
</RecordType>