force-app/main/default/objects/ALC__c/listViews/A007_Broker_Candidates.listView-meta.xml
<ListView>
    <fullName>A007_Broker_Candidates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agency__c</field>
        <operation>equals</operation>
        <value>A007</value>
    </filters>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Broker</value>
    </filters>
    <label>A007 Broker Candidates</label>
</ListView>