force-app/main/default/objects/ALC__c/listViews/A007_NRFs.listView-meta.xml
<ListView>
    <fullName>A007_NRFs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agency__c</field>
        <operation>equals</operation>
        <value>A007</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ALC__c.NRF</value>
    </filters>
    <label>A007 NRFs</label>
</ListView>