force-app/main/default/objects/ALC__c/listViews/A157_Broker_Candidates.listView-meta.xml
<ListView>
    <fullName>A157_Broker_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>LADL_Sales_Experience__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mobile__c</columns>
    <columns>Personal_Email_Address__c</columns>
    <columns>Position__c</columns>
    <columns>Registered__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Broker</value>
    </filters>
    <filters>
        <field>Agency__c</field>
        <operation>equals</operation>
        <value>A157</value>
    </filters>
    <label>A157 Broker Candidates</label>
</ListView>