force-app/main/default/objects/ALC__c/listViews/A157_Candidates.listView-meta.xml
<ListView>
    <fullName>A157_Candidates</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage__c</columns>
    <columns>Candidate__c</columns>
    <columns>Tags__c</columns>
    <columns>Notes__c</columns>
    <columns>Start_date__c</columns>
    <columns>Life_Insurance_Licensed__c</columns>
    <columns>Registered__c</columns>
    <columns>Personal_Email_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Candidate Complete,CANCELED,TERMINATED</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ALC__c.Career</value>
    </filters>
    <label>A157 Candidates by Record Type</label>
    <sharedTo>
        <role>COO</role>
        <role>GA</role>
    </sharedTo>
</ListView>