force-app/main/default/objects/ALC__c/listViews/A157_NRFs.listView-meta.xml
<ListView>
    <fullName>A157_NRFs</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Latest_Note_Date__c</columns>
    <columns>Latest_Note_Text__c</columns>
    <columns>Notes__c</columns>
    <columns>Position__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agency__c</field>
        <operation>equals</operation>
        <value>A157</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ALC__c.NRF</value>
    </filters>
    <label>A157  NRFs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>ALCs</group>
    </sharedTo>
</ListView>