force-app/main/default/objects/ALC__c/listViews/ALC_ALC.listView-meta.xml
<ListView>
    <fullName>ALC_ALC</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Contract__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Agent</value>
    </filters>
    <label>ALC</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>