force-app/main/default/objects/ALC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Stage__c</columns>
    <columns>Agency__c</columns>
    <columns>Notes__c</columns>
    <columns>Office__c</columns>
    <columns>Personal_Email_Address__c</columns>
    <columns>Position__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Tags__c</columns>
    <columns>Related_Candidate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ALC__c.Career</value>
    </filters>
    <label>All Records</label>
    <sharedTo>
        <group>ALCs</group>
    </sharedTo>
</ListView>