force-app/main/default/objects/ALC__c/listViews/All_Broker_Candidates.listView-meta.xml
<ListView>
    <fullName>All_Broker_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Latest_Note_Text__c</columns>
    <columns>Latest_Note_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Position__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Broker</value>
    </filters>
    <label>All Broker Candidates</label>
</ListView>