force-app/main/default/objects/ALC__c/listViews/Registrations.listView-meta.xml
<ListView>
    <fullName>Registrations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ALC__c.Registration</value>
    </filters>
    <label>Registrations</label>
</ListView>